# html-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  html
benches/: bench_wikipedia.rs  wikipedia-2020-12-21.html
examples/get_all_href/: index.html  main.rs
examples/get_anchor_href/: main.rs
examples/simple_parser/: main.rs
misc/: 1.html  test.html  test_1.html
src/: bin.rs  error.rs  grammar.pest  lib.rs  main.rs  parser.rs
src/ast/: element.rs  format_error_msg.rs  formatting.rs  mod.rs  node.rs
src/dom/: element.rs  formatting.rs  mod.rs  node.rs  span.rs
src/grammar/: mod.rs  rules.pest
src/parser/: fmt.rs  html.pest  mod.rs  rules.pest  tests.rs
src/parser/tests/: attributes.rs  mod.rs  (+3 more)
tests/: attributes.rs  bin.rs  comments.rs  document.rs  document_empty.rs  document_fragment.rs  element.rs  element_attributes.rs  node_iter.rs  output.rs  source_span.rs  svg.rs  text.rs  websites.rs
tests/snapshots/: comments__it_can_parse_document_with_just_comments.snap  comments__it_can_parse_document_with_just_one_comment.snap  document__it_can_parse_document_with_comments.snap  document__it_can_parse_minimal_document.snap  document_empty__it_can_parse_empty_document.snap  document_fragment__it_can_parse_single_div_as_fragment.snap  document_fragment__it_can_parse_single_text_as_fragment.snap  document_fragment__it_can_parse_text_comment_element_as_fragment.snap  element__it_can_clone_node.snap  element__it_can_deal_with_weird_whitespaces.snap  element__it_can_parse_broken_html.snap  element__it_can_parse_deeply_nested.snap  element__it_can_parse_multiple_elements.snap  element__it_can_parse_multiple_open_elements.snap  element__it_can_parse_nested_elements.snap  element__it_can_parse_nested_elements_mixed_children.snap  element__it_can_parse_one_element.snap  element__it_can_parse_one_element_mixed_case.snap  element__it_can_parse_one_element_mixed_case_numbers.snap  element__it_can_parse_one_element_mixed_case_numbers_symbols.snap  element__it_can_parse_one_element_upper_case.snap  element__it_can_parse_script_with_content.snap  element__it_can_parse_style_with_content.snap  element__it_errors_when_multiple_nested_elements_dont_match.snap  element__it_skips_dangling_elements.snap  element_attributes__it_can_parse_attribute_key_mixed_case_symbols.snap  element_attributes__it_can_parse_attribute_multiple_values_single_quote.snap  element_attributes__it_can_parse_attribute_with_empty_value.snap  element_attributes__it_can_parse_classes.snap  element_attributes__it_can_parse_double_quote.snap  element_attributes__it_can_parse_id.snap  element_attributes__it_can_parse_multiple_attributes_double_quote.snap  element_attributes__it_can_parse_multiple_attributes_double_quote.snap.new  element_attributes__it_can_parse_multiple_attributes_no_quote.snap  element_attributes__it_can_parse_multiple_attributes_no_quote.snap.new  element_attributes__it_can_parse_multiple_attributes_single_quote.snap  element_attributes__it_can_parse_no_quote.snap  (+13 more)
