[package]
name = "html_parser"
version = "0.6.3"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"
repository = "https://github.com/mathiversen/html-parser"
license = "MIT"
description = "A simple and general purpose html/xhtml parser"
keywords = ["html", "parser", "json", "pest", "dom"]
categories = ["parsing", "web-programming"]
readme = "README.md"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0.79"

[dev-dependencies]
indoc = "1.0.4"
insta = "1.14.0"
tempfile = "3.3.0"
criterion = "0.3.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
structopt = "0.3.26"

[[example]]
name = "get_all_href"
path = "examples/get_all_href/main.rs"

[[example]]
name = "simple_parser"
path = "examples/simple_parser/main.rs"

[[bench]]
name = "bench_wikipedia"
harness = false
