[package]
name = "html_parser"
version = "0.7.0"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"
repository = "https://github.com/mathiversen/html-parser"
license = "MIT"
description = "A simple and general purpose html/xhtml parser"
keywords = ["html", "parser", "json", "pest", "dom"]
categories = ["parsing", "web-programming"]
readme = "README.md"

[dependencies]
pest = "2.5.7"
pest_derive = "2.5.7"
thiserror = "1.0.40"
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.159"
serde_json = "1.0.95"
doc-comment = "0.3.3"

[dev-dependencies]
indoc = "2.0.1"
insta = { version = "1.29.0", features = ["json"]}
tempfile = "3.5.0"
criterion = "0.4.0"
reqwest = { version = "0.11.16", features = ["blocking", "rustls-tls"] }
clap = { version = "4.2.1", features = ["derive"] }

[[example]]
name = "get_all_href"
path = "examples/get_all_href/main.rs"

[[example]]
name = "simple_parser"
path = "examples/simple_parser/main.rs"

[[bench]]
name = "bench_wikipedia"
harness = false
